--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -22,6 +22,19 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="schoolmain">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> School 
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="schoolupdate">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> School Update
+            </NavLink>
+        </li>
+
     </ul>
 </div>
 
