--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -22,6 +22,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Student">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Student
+            </NavLink>
+        </li>
+         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="StudentInfo">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Student form
+            </NavLink>
+        </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="schoolmain">
