--- a/Pages/SchoolMain.razor
+++ b/Pages/SchoolMain.razor
@@ -4,27 +4,22 @@
 @inject SchoolService SchoolService
 @inject NavigationManager NavigationManager
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>School Name</th>
-            <th>Address</th>
-            <th>School Code</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var School in SchoolService.Schools)
-        {
-            <tr>
-                <td>@School.SchoolName</td>
-                <td>@School.Address</td>
-                <td>@School.SchoolCode</td>
-            </tr>
-        }
-    </tbody>
-</table>
 
-<button @onclick="CreateSchool"> Add School</button>
+<MudTable Items="@SchoolService.Schools">
+    <HeaderContent>
+        <MudTh>School Name</MudTh>
+        <MudTh>Address</MudTh>
+        <MudTh>School Code</MudTh>
+    </HeaderContent>
+    <RowTemplate>
+        <MudTd DataLabel="School Name">@context.SchoolName</MudTd>
+        <MudTd DataLabel="Address">@context.Address</MudTd>
+        <MudTd DataLabel="School Code">@context.SchoolCode</MudTd>
+    </RowTemplate>
+</MudTable>
+
+
+<MudButton Variant="Variant.Filled" Color="Color.Primary" @onclick="CreateSchool">Add School</MudButton>
 
 
 
