New TaB StudBack

--- a/Pages/SchoolForm.razor
+++ b/Pages/SchoolForm.razor
@@ -1,5 +1,5 @@
-﻿@using MudBlazor
-@page "/schoolform"
+﻿@page "/schoolform"
+@using MudBlazor
 @using BlazorTest.Data
 @inject SchoolService SchoolService
 @inject NavigationManager NavigationManager
