--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -32,7 +32,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Student form
             </NavLink>
         </li>
-
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/StudentBackground">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Student Background
+            </NavLink>
+        </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="schoolmain">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> School 
