--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -7,7 +7,7 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
-        <li class="nav-item px-3">
+@*         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
@@ -21,7 +21,20 @@
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
+        </li> *@
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="landingpage">
+                <span class="oi oi-home" aria-hidden="true"></span> Landing Page
+            </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="schoolmain">
+                <span class="oi oi-heart" aria-hidden="true"></span> School
+            </NavLink>
+        </li>
+
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="Student">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Student
@@ -43,11 +56,6 @@
             </NavLink>
         </li>
 
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="schoolupdate">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> School Update
-            </NavLink>
-        </li>
 
     </ul>
 </div>
